feat: constrain recipe source providers